www/about.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: about
spec:
  replicas: 5
  selector:
    matchLabels:
      app: about
  template:
    metadata:
      labels:
        app: about
    spec:
      containers:
      - image: modem7/docker-starwars
        imagePullPolicy: IfNotPresent
        name: about
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: about
spec:
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
  type: ClusterIP
  selector:
    app: about
