www/frontpage.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontpage
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: frontpage
  template:
    metadata:
      labels:
        app: frontpage
    spec:
      containers:
      - image: httpd
        name: frontpage
        ports:
        - containerPort: 80
---- 
apiVersion: v1
kind: Service
metadata:
  name: frontpage
spec:
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: frontpage
