www/subscribe.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: subscribe
spec:
  replicas: 5
  selector:
    matchLabels:
      app: subscribe
  template:
    metadata:
      labels:
        app: subscribe
    spec:
      containers:
      - image: public.ecr.aws/ecs-sample-image/amazon-ecs-sample:latest
        imagePullPolicy: IfNotPresent
        name: subscribe
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: subscribe
spec:
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  type: ClusterIP
  selector:
    app: subscribe
