www/main-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/issuer: letsencrypt-prod
    kubernetes.io/ingress.class: nginx
  name: main
  namespace: default
spec:
  rules:
  - host: fp.lmop.net
    http:
      paths:
      - backend:
          service:
            name: frontpage
            port:
              number: 8080
        path: /*
        pathType: Prefix
      - backend:
          service:
            name: echoserver
            port:
              number: 80
        path: /about
        pathType: Prefix
      - backend:
          service:
            name: echoserver
            port:
              number: 80
        path: /echo
        pathType: Prefix
  tls:
  - hosts:
    - fp.lmop.net
    secretName: fp-lmop-tls
